--- a/skribblr_project/skribblr/templates/portal-home.html
+++ b/skribblr_project/skribblr/templates/portal-home.html
@@ -14,16 +14,17 @@
 
       <div class="col-md-6">
 
+        <a href='/portal/compose'>
         <button id="compose-btn" type="button" class="btn btn-primary">
           Compose Entry
-        </button>
+        </button></a>
 
       </div>
 
       <div class="col-md-6">
 
         <a href='/portal/entry-list'>
-        <button id="compose-btn" type="button" class="btn btn-primary">
+        <button id="view-entries-btn" type="button" class="btn btn-primary">
           View Entries
         </button></a>
 
