--- a/skribblr_project/skribblr/templates/portal-edit.html
+++ b/skribblr_project/skribblr/templates/portal-edit.html
@@ -8,18 +8,31 @@
   </head>
 
   <body>
-    <h1> Edit Entry: </h1>
 
-    <div>
-      {{ entry.title }}
+    <form action='/portal/edit/update/{{entry.id}}' method="POST">
+      <h1> Edit Entry: </h1>
 
-      {{ entry.tldr }}
+      <div>
+        <label for="title">Title:</label>
+        <input type="text" id="title-field" value="{{entry.title}}" name="updated_title">
+      </div>
 
-    </div>
+      <div>
+        <label for="title">TLDR:</label>
+        <input type="text" id="tldr-field" value="{{entry.tldr}}" name="updated_tldr">
+      </div>
 
-    <div>
-      {{ entry.content}}
-    </div>
+      <div>
+        <label for "content">Entry Content:</label>
+        <textarea id="content-field" name="updated_content">{{entry.content}}</textarea>
+      </div>
+
+      <div>
+        <button type="submit" id="submit-btn" class="btn btn-primary">Update!</button>
+        {% csrf_token %}
+    </form>
+
+
 
   </body>
 
